200301191844 2 * Czech EPG support
200301200416 3 * Changelog support in upgrade
200301301950 6 4 Removed old dreambox RC
200301301950 6 * Language setup wizard
200301301950 4 56 MPEG Player
200301301950 7 * New Runlevels (for plugins)
200301300947 5 * Added default AC3 sound option
200301301956 7 * Added language Wizzard on first enigma start
200302032000 4 56 Improved readability of fonts
200302032000 3 * Implemented shortcuts in setup menu
200302040332 4 * Add support for multiple favourite lists ( user bouquets )
200302040332 4 * Add lastchannel zapping with Key 0
200302072045 8 * Show short service names in LCD when avail
200302072045 8 * Fix handy style browsing in original sorted DVB bouquets
200302082206 6 * Add support to rename recorded movies ( not the filenames ) 
200302082206 8 * Show filename of recorded movies in channelinfo
200302091843 5 * Extended Event Info is now working on subservices and nvod channels
200302091500 6 * Diseqc setup wizard
200302112339 2 * New format for services bouquets and favourite lists this is important for better support of services with non unique tsid/onid combinations ( feed and SCPCs )
200302112101 5 * Show correct free diskspace on mounted nfs shares
200302112101 5 * Add partitioncheck support for reiserfs partitions
200302112101 3 * Add for each satellit two new folders in serviceselector ( on contains all services of ths satellite, and the other contains all bouquets of ths satellite )
200302122208 4 * Show Orbital Position in Channelinfo and OSD Info bar
200302122243 5 * Add nGrab Streaming Server Support ( PES Streaming over Network)
200302131538 5 * Translation info will be shown in "about" dialog
200302182213 4 * Add help window support
200302190420 2 * Add full DiSEqC 1.1 support ( uncommitted switches )
200302190420 3 * Fix support for Rotors behind DiSEqC Switches
200302190420 6 * Show Streaminfo on doubleklick Info Button
200302242113 4 * Volume&mute keys will work everywhere